assets/scss/style.scss
/* ... */
/* Header */
header.page-header {
  min-height: 500px;
  position: relative;
  display: flex;
  align-items: center;
  padding-bottom: 200px;
  box-sizing: border-box;
  background-color: #212121;
  color: #fff;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;

  &.top-story {
    min-height: 70vh;
  }

  figure.wave {
    position: absolute;
    bottom: 0px;
    width: 100vw;
    height: 200px;
    background-image: url(../../img/waves/wave.png);
    background-size: 100% 100%;
    background-repeat: no-repeat;
    display: block;

    @media (prefers-color-scheme: dark) {
      background-image: url(../../img/waves/wave-dark.png);
    }
  }

  div.content {
    padding: 180px 0;

    h1.headline {
      margin-top: 6px;
      font-size: 48px;
      max-width: 80%;
      line-height: 1.1em;
    }

    a.button {
      margin-top: 16px;
      display: inline-block;
    }

    @media #{$small-device} {
      h1.headline {
        font-size: 32px;
        max-width: 100%;
      }
    }
  }

  &.article {
    div.meta {
      font-size: 12px;
      color: hsla(0, 0%, 100%, 0.8);
      text-transform: uppercase;
      font-weight: 600;
      letter-spacing: 0.05em;

      a {
        color: inherit;
        text-decoration: none;
      }

      span.readingtime,
        span.category {
        @media #{$small-device} {
          display: none;
        }
      }
      
      span::after {
        padding-left: 4px;
        padding-right: 3px;
        content: "-";

        @media #{$small-device} {
          content: "";
        }
      }

      span:last-child::after {
        content: "";
      }
    }
  }

  div.authors,
    aside.description,
    aside.bio {
    font-size: 16px;
    color: hsla(0, 0%, 100%, 0.9);
    font-weight: 500;
    max-width: 45%;
    margin-top: 10px;

    @media #{$small-device} {
      max-width: 90%;
    }

    div.authors {

      max-width: 30%;

      @media #{$small-device} {
        max-width: 60%;
      }

    }    

    a {
      color: inherit;
      text-decoration: none;        
    }
  }

  &.branding {
    background-image: linear-gradient(to right, rgb(89, 56, 141) 0%, rgb(22, 136, 167) 100%);
  }

  &.error {
    background-image: url(../../img/sections/error.jpg);
  }
}

/* Articles */
main.post-list {
  margin-top: -250px;
  padding-bottom: 100px;
  position: relative;
  z-index: 2;

  div.masonry {
    display: flex;
    flex-flow: column wrap;
    align-content: space-between;  
    margin: -1rem;
    height: 1800px;

    article.article:nth-child(3n+1) { order: 1; }
    article.article:nth-child(3n+2) { order: 2; }
    article.article:nth-child(3n)   { order: 3; }

    article.article {
      @include box-shadow(0 1em 3em -0.25em rgba(46, 46, 46, 0.61));

      @media (prefers-color-scheme: dark) {
        @include box-shadow(0 1em 3em -0.25em rgba(17, 17, 17, 0.61));
      }

      border-radius: 10px;
      display: flex;
      background-color: #fff;
      flex-direction: column;
      width: 32%;
      margin: 1rem;

      @media (prefers-color-scheme: dark) {
        background-color: #111111;
        color: white;
      }

      img.thumbnail {
        border-top-left-radius: 10px;
        border-top-right-radius: 10px;
        height: 180px;
        object-fit: cover;

        width: 100%;
      }

      div.content {
        padding: 20px 30px;
        height: 100%;

        span.category {
          color: #888;
          text-transform: uppercase;
          font-size: 12px;
          display: block;

          @media (prefers-color-scheme: dark) {
            color: white;
          }
        }

        h1.title {
          padding-top: 5px;
          display: block;
          font-weight: 800;
          font-size: 18px;
          letter-spacing: 0.03em;

          @media (prefers-color-scheme: dark) {
            color: hsla(0, 0%, 100%, 0.85);
          }
        }

        p.text-preview {
          margin-top: 1em;
          font-weight: 400;
          color: rgb(90, 90, 90);
          display: block;
          line-height: 1.6;

          @media (prefers-color-scheme: dark) {
            color: #92a3ab;
          }
        }
      }

      a.button {
        right: 25px;
        position: relative;
        bottom: -15px;
        width: fit-content;
        align-self: flex-end;
      }
    }
  }

  div.masonry::before,
  div.masonry::after {
    content: "";
    flex-basis: 100%;
    width: 0;
    order: 2;
  }
}
/* ... */

